[workspace]
resolver = "2"

members = [
    "lib/*", 
    "test-program",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
sha2 = "0.10.9"
hashbrown = {version = ">=0.14, <0.17"}
hasher = {path = "lib/hasher"}
svm-hashmap = {path = "lib/hashmap"}
svm-hashset = {path = "lib/hashset"}
