[workspace]
resolver = "2"

members = [
    "lib/*", 
    "test-program",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/abelmarnk/svm-hash"

[workspace.dependencies]
sha2 = "0.10.9"
hashbrown = {version = ">=0.14, <0.17"}
svm-hasher = {path = "lib/hasher"}
svm-hashmap = {path = "lib/hashmap"}
svm-hashset = {path = "lib/hashset"}
