[package]
name = "svm-hasher"
version = "0.1.0"
readme = "README.md"
repository = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
description = "Custom svm sha256 hasher"

[dependencies]
sha2 = {workspace = true}

[lints.rust.unexpected_cfgs]
    level = "warn"
    check-cfg = [
        'cfg(target_os, values("solana"))'
    ]