[package]
name = "svm-hashmap"
version = "0.1.0"
readme = "README.md"
repository = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
description = "Custom svm hashmap"


[lib]
crate-type = ["rlib"]

[dependencies]
svm-hasher = {workspace = true}
hashbrown = {workspace = true}
