[package]
name = "svm-hashset"
version = "0.1.0"
readme = "README.md"
repository = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
description = "Custom svm hashset"

[lib]
crate-type = ["rlib"]

[dependencies]
svm-hasher = {workspace = true}
hashbrown = {workspace = true}